# TaskHound

./: .gitignore  CHANGELOG.md  Makefile  NOTICE  README.md  ROADMAP_BATTLEPLAN.md  bh_connector.config.example  bh_connector.config.template  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  test_disabled.xml
.github/workflows/: test.yml
BOF/: README.md  compile.sh
BOF/AdaptixC2/: taskhound.axs
config/: bh_connector.config.example  model.json  model.json.example  taskhound.toml.example
docs/: CACHING_DESIGN.md  ORPHANED_NODES_ANALYSIS.md
taskhound/: classification.py  cli.py  config.py  config_model.py  engine.py  engine_async.py  laps.py
taskhound/auth/: __init__.py  context.py
taskhound/connectors/: __init__.py  bloodhound.py
taskhound/dpapi/: __init__.py  decryptor.py  looter.py  parser.py
taskhound/engine/: __init__.py  async_runner.py  disk_loader.py  helpers.py  offline.py  online.py
taskhound/laps/: __init__.py  decryption.py  exceptions.py  helpers.py  models.py  parsing.py  query.py
taskhound/models/: __init__.py  task.py
taskhound/smb/: __init__.py  (+4 more)
tests/: __init__.py  conftest.py  live_test_config.json.example  test_auth_context.py  test_bh_api.py  test_bh_auth.py  test_bh_connector.py  test_bh_upload.py  test_bloodhound_output.py  test_cache_manager.py  test_classification.py  test_classification_additional.py  test_cli_args.py  test_concise_output.py  test_config_model.py  test_config_output.py  test_connectors_bloodhound.py  test_console_utils.py  test_credentials.py  test_credguard.py  test_date_parser.py  test_dns_utils.py  test_dpapi_decryptor.py  test_dpapi_looter.py  test_dpapi_parser.py  test_engine.py  test_engine_async.py  test_engine_disk_loader.py  test_engine_helpers.py  test_engine_offline.py  test_engine_online.py  test_helpers_extended.py  test_highvalue.py  test_html_report.py  test_imports.py  test_laps.py  test_laps_decryption.py  test_laps_exceptions.py  test_laps_helpers.py  test_laps_models.py  (+32 more)
(+27 files in other folders)
