[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskhound"
version = "0.8.1"
description = "SchedTask PrivCheck with BloodHound enrichment"
readme = "README.md"
license = "MIT"
authors = [{ name = "1r0BIT", email = "r.unglaub@prosec-networks.com" }]
keywords = ["security", "bloodhound", "windows", "pentest", "taskscheduler"]
requires-python = ">=3.9"
dependencies = [
    "impacket>=0.11.0",
    "ldap3>=2.9.0",
    "pycryptodome>=3.15.0"
]

[project.urls]
Homepage = "https://github.com/1r0BIT/TaskHound"
Issues = "https://github.com/1r0BIT/TaskHound/issues"

[project.scripts]
taskhound = "taskhound.cli:main"

[tool.setuptools.packages.find]
include = ["taskhound*"]
exclude = ["BOF*"]
