[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskhound"
version = "1.1.0"
description = "SchedTask PrivCheck with BloodHound enrichment"
readme = "README.md"
license = "MIT"
authors = [{ name = "1r0BIT", email = "r.unglaub@prosec-networks.com" }]
keywords = ["security", "bloodhound", "windows", "pentest", "taskscheduler"]
requires-python = ">=3.11"
dependencies = [
    "impacket>=0.11.0",
    "pycryptodome>=3.15.0",
    "requests>=2.25.0",
    "neo4j>=5.0.0",
    "dnspython>=2.0.0",
    "bhopengraph>=1.1.0",
    "pyasn1>=0.5.0",
    "pyasn1-modules>=0.3.0",
    "rich>=13.0.0",
    "rich-argparse>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests",
    "ipython>=8.12.0",
]

[project.urls]
Homepage = "https://github.com/1r0BIT/TaskHound"
Issues = "https://github.com/1r0BIT/TaskHound/issues"

[project.scripts]
taskhound = "taskhound.cli:main"

[tool.setuptools.packages.find]
include = ["taskhound*"]
exclude = ["BOF*"]
